# tag-image-manager-challange

./: .envrc.example  .gitignore  Makefile  README.MD  app.py  pyproject.toml
.chalice/: config.json
chalicelib/: authorizer.py  datadefs.py  db.py  models.py  validation.py
chalicelib/views/: helpers.py  image_views.py  search_views.py  tag_views.py  upload_views.py
cloudformation/: chalice.yaml  infra.yaml
design-docs/: .widdershins.json  REQUIREMENTS AND DESIGN.md
design-docs/diagrams-src/: component-diagram.plantuml  staged-upload-sequence.plantuml
design-docs/openapi/: generated-tagged-image-manager.md  tagged-image-manager.yml
scripts/: __init__.py  cognito-id-token.py
tests/helpers/: __init__.py  assert_helpers.py
tests/unit/: conftest.py  test_app.py
tests/unit/chaliclib/: test_validator.py
tests/unit/views/: test_image_views.py  test_search_views.py  test_tag_views.py  test_upload_views.py
tests/unit/views/snapshots/test_image_views/test_image/expected/: 0.json
tests/unit/views/snapshots/test_image_views/test_image_delete/expected/: 0.json
tests/unit/views/snapshots/test_image_views/test_image_update/expected/: 0.json
tests/unit/views/snapshots/test_image_views/test_images/expected/: 0.json
tests/unit/views/snapshots/test_image_views/test_images/page-1/: 0.json
tests/unit/views/snapshots/test_image_views/test_images/page-2/: 0.json
tests/unit/views/snapshots/test_image_views/test_post_image/expected/: 0.json
tests/unit/views/snapshots/test_search_views/test_search/expected/: 0.json
tests/unit/views/snapshots/test_tag_views/test_tag/expected/: 0.json
tests/unit/views/snapshots/test_tag_views/test_tags/expected/: 0.json
tests/unit/views/snapshots/test_upload_views/test_upload/expected/: 0.json
